change the title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Batch-09 Assignment Solution</title>
+  <title>Chef's Table</title>
   <script src="https://kit.fontawesome.com/b3564e7181.js" crossorigin="anonymous"></script>
 </head>
 
